[gd_scene load_steps=6 format=3 uid="uid://xwkgnocycl2d"]

[ext_resource type="Script" path="res://main_interface.gd" id="1_rqb28"]
[ext_resource type="Texture2D" uid="uid://bi33afrca5a0" path="res://Resources/Images/actions/fireball.png" id="2_amcv3"]
[ext_resource type="Script" path="res://skill_interface.gd" id="2_xpyh6"]
[ext_resource type="Script" path="res://stats_interface.gd" id="4_rcwik"]
[ext_resource type="Texture2D" uid="uid://crp52x171d51g" path="res://Resources/Images/testimages/characterblocking.png" id="4_yyjjp"]

[node name="MainInterface" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqb28")

[node name="SkillPane" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -439.0
offset_top = -289.0
offset_right = 439.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xpyh6")

[node name="SkillWindow" type="HBoxContainer" parent="SkillPane"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -434.5
offset_top = -285.0
offset_right = 434.5
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Panel1" type="ColorRect" parent="SkillPane/SkillWindow"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 0.0196078, 1, 0)

[node name="Panel2" type="ColorRect" parent="SkillPane/SkillWindow"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.0588235, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="SkillPane/SkillWindow/Panel2"]
layout_mode = 0
offset_left = 52.5
offset_top = 7.0
offset_right = 248.5
offset_bottom = 199.0
texture = ExtResource("2_amcv3")
expand_mode = 3

[node name="Description" type="Label" parent="SkillPane/SkillWindow/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -76.5
offset_right = 141.5
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="SkillList" type="VBoxContainer" parent="SkillPane/SkillWindow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fire 1" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 1 Fire Spell"
text = "Fire 1"

[node name="Fire 2" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 2 Fire Spell"
text = "Fire 2"

[node name="Fire 3" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 3 Fire Spell"
text = "Fire 3"

[node name="Ice 1" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 1 Ice Spell"
text = "Ice 1"

[node name="Ice 2" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 2 Ice Spell"
text = "Ice 2"

[node name="Ice 3" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 3 Ice Spell"
text = "Ice 3"

[node name="Thunder 1" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 1 Bolt Spell"
text = "Thunder 1"

[node name="Thunder 2" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 2 Bolt Spell"
text = "Thunder 2"

[node name="Thunder 3" type="Button" parent="SkillPane/SkillWindow/SkillList"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Level 3 Bolt Spell"
text = "Thunder 3"

[node name="StatsPane" type="Panel" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.155
anchor_top = 0.1
anchor_right = 0.155
anchor_bottom = 0.1
offset_left = 141.6
offset_top = 81.0
offset_right = 811.6
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rcwik")

[node name="PlayerSprite" type="TextureRect" parent="StatsPane"]
layout_mode = 0
offset_left = 149.0
offset_top = 62.0
offset_right = 189.0
offset_bottom = 122.0
texture = ExtResource("4_yyjjp")

[node name="CoreStatContainer" type="VBoxContainer" parent="StatsPane"]
layout_mode = 2
offset_left = 498.0
offset_top = 27.0
offset_right = 641.0
offset_bottom = 406.0

[node name="CoreStatPane" type="GridContainer" parent="StatsPane/CoreStatContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 5
columns = 4

[node name="STR" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "STR:"

[node name="STRValue" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "0"

[node name="STRMinus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "-"

[node name="STRPlus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "+"

[node name="INT" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "INT:"

[node name="INTValue" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "0"

[node name="INTMinus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "-"

[node name="INTPlus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "+"

[node name="DEX" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "DEX:"

[node name="DEXValue" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "0"

[node name="DEXMinus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "-"

[node name="DEXPlus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "+"

[node name="STA" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "STA:"

[node name="STAValue" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "0"

[node name="STAMinus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "-"

[node name="STAPlus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "+"

[node name="LUK" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "LUK:"

[node name="LUKValue" type="Label" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "0"

[node name="LUKMinus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "-"

[node name="LUKPlus" type="Button" parent="StatsPane/CoreStatContainer/CoreStatPane"]
layout_mode = 2
text = "+"

[node name="APContainer" type="HBoxContainer" parent="StatsPane/CoreStatContainer"]
layout_mode = 2

[node name="AP" type="Label" parent="StatsPane/CoreStatContainer/APContainer"]
layout_mode = 2
text = "AP Available:"

[node name="AvailAP" type="Label" parent="StatsPane/CoreStatContainer/APContainer"]
layout_mode = 2
text = "0"

[node name="SecStatContainer" type="GridContainer" parent="StatsPane/CoreStatContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2
metadata/_edit_use_anchors_ = true

[node name="CRIT" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "CRIT:"

[node name="CRITValue" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "5%"

[node name="MISS" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "MISS:
"

[node name="MISSValue" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "5%"

[node name="DODGE" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "DODGE:"

[node name="DODGEValue" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "5%"

[node name="PARRY" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "PARRY:
"

[node name="PARRYValue" type="Label" parent="StatsPane/CoreStatContainer/SecStatContainer"]
layout_mode = 2
tooltip_text = "Strength increases your melee damage, and parry rate"
mouse_filter = 1
text = "5%
"

[node name="HPMP" type="GridContainer" parent="StatsPane"]
layout_mode = 1
offset_left = 114.0
offset_top = 210.0
offset_right = 233.0
offset_bottom = 294.0
columns = 4

[node name="Spacer" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2

[node name="Level" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "LVL:"

[node name="pLevelLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "5"

[node name="Spacer2" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "HP:"

[node name="pHPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
size_flags_horizontal = 8
text = "150"

[node name="HPSplice" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "/"

[node name="pMaxHPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
size_flags_horizontal = 8
text = "200"

[node name="MPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "MP:"

[node name="pMPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
size_flags_horizontal = 8
text = "10"

[node name="MPSplice" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
text = "/"

[node name="pMaxMPLabel" type="Label" parent="StatsPane/HPMP"]
layout_mode = 2
size_flags_horizontal = 8
text = "20"

[node name="Button" type="Button" parent="StatsPane"]
layout_mode = 0
offset_left = 128.0
offset_top = 292.0
offset_right = 207.0
offset_bottom = 323.0
text = "Level Up!"

[node name="Toggle" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 220.0
offset_top = 599.0
offset_right = 267.0
offset_bottom = 630.0
text = "Toggle"

[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 1" to="." method="_on_fire_1_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 1" to="." method="_on_f_1_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 1" to="SkillPane" method="_on_fire_1_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 2" to="." method="_on_fire_2_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 2" to="." method="_on_f_2_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 2" to="SkillPane" method="_on_fire_2_pressed"]
[connection signal="pressed" from="SkillPane/SkillWindow/SkillList/Fire 3" to="SkillPane" method="_on_fire_3_pressed"]
[connection signal="pressed" from="StatsPane/CoreStatContainer/CoreStatPane/STRMinus" to="SkillPane" method="_on_str_minus_pressed"]
[connection signal="pressed" from="Toggle" to="." method="_on_stats_pressed"]
